Move scripts/ to distutils console_scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,9 @@ setup-hooks =
 [files]
 packages =
     chukchi
+
+[entry_points]
+console_scripts =
+    chukchi-init-db = chukchi.cmd:init_db
+    chukchi-run = chukchi.cmd:run
+    chukchi-update-feeds = chukchi.cmd:update_feeds
